# PR-Splitter-MCP

./: .gitignore  README.md  config.env  pyproject.toml  server.py
src/: __init__.py  analyzer.py  git_manager.py  pr_creator.py  splitter.py
