[tool.poetry]
name = "pr-splitter-mcp"
version = "1.0.1"
description = "A MCP server that intelligently splits large PRs into multiple smaller PRs for better code review"
authors = ["Polly2014 <baoliwang@microsoft.com>"]
readme = "README.md"
packages = [{include = "src"}, {include = "server.py"}]
license = "MIT"
homepage = "https://github.com/Polly2014/PR-Splitter-MCP"
repository = "https://github.com/Polly2014/PR-Splitter-MCP"
documentation = "https://github.com/Polly2014/PR-Splitter-MCP#readme"
keywords = ["mcp", "git", "pr", "pull-request", "code-review", "fastmcp", "azure-devops", "github"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = ">=2.0.0"
python-dotenv = ">=1.0.0"
pydantic = ">=2.5.0"
gitpython = ">=3.1.0"
aiofiles = ">=23.0.0"
httpx = ">=0.25.0"

# Azure DevOps SDK (for ADO PR creation)
azure-devops = ">=7.1.0b4"
azure-identity = ">=1.15.0"
msrest = ">=0.7.1"

# GitHub SDK (for GitHub PR creation)
PyGithub = ">=2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"

[tool.poetry.scripts]
pr-splitter-mcp = "server:main"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
